fix: fix layout issues

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -136,6 +136,7 @@
   }
 
   .footer__social-links {
-    column-gap: 20px;
+    align-self: start;
+    column-gap: 27.9px;
   }
 }
