--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -76,7 +76,6 @@
 @media screen and (max-width: 500px) {
   .main {
     margin: -56px 0 0;
-    /* margin: 0; */
     background: url('../../images/hero-banner-mobile.png') no-repeat center;
     background-size: cover;
   }
@@ -88,7 +87,6 @@
 
   .main__content {
     padding-top: 35px;
-    max-width: 288px;
   }
 
   .main__title {
