--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -112,7 +112,7 @@
 
   .nav__item {
     margin: 0;
-    padding: 12px 10px;
+    padding: 10px;
   }
 
   .nav__link {
