--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -75,6 +75,10 @@
     grid-template-columns: repeat(auto-fill, minmax(224px, 1fr));
     grid-auto-rows: minmax(420px, auto);
   }
+
+  .show-more__btn {
+    padding: 16px 74px;
+  }
 }
 
 @media screen and (max-width: 500px) {
